--- a/djangoapp/blog/templates/blog/base.html
+++ b/djangoapp/blog/templates/blog/base.html
@@ -4,13 +4,20 @@
   {% include 'blog/partials/_head.html' %}
 </head>
 <body class="dark-theme">
-  <h1>{{ site_setup.title }}</h1>
-  <!--Nosso site está dividido entre: CABEÇALHO, PAGINAÇÃO E RODAPÉ-->
-  <h1>{% include 'blog/partials/_header.html' %}</h1>
-  {% block content %}{% endblock content %}
+  <div class="blog-wrapper">
+    {% if site_setup.show_header  %}
+      {% include 'blog/partials/_header.html' %}
+    {% endif %}
+    
+    {% block content %}{% endblock content %}
 
-  <h1>{% include 'blog/partials/_pagination.html' %}</h1>
-  
-  <h1>{% include 'blog/partials/_footer.html' %}</h1>
+    {% if site_setup.show_pagination  %}
+      {% include 'blog/partials/_pagination.html' %}
+    {% endif %}
+
+    {% if site_setup.show_footer  %}
+      {% include 'blog/partials/_footer.html' %}
+    {% endif %}
+  </div>
 </body>
 </html>
