--- a/djangoapp/blog/templates/blog/partials/_post_card.html
+++ b/djangoapp/blog/templates/blog/partials/_post_card.html
@@ -1,15 +1,24 @@
 <article class="card">
   
+  <!-- 
+    Se existe cover, aparece essa div, essa div pega também a URL da imagem,
+    no atributo cover do model post, como ele é do tipo ImageField
+    acaba gerando um link ou URL da imagem.
+    pegamos esse atributo URL do cover e inserimos no atributo src da tag img. 
+    SIMPLESMENTE SENSACIONAL
+  -->
+  {% if post.cover %}
   <div class="card-cover-wrapper">
     <a href="#" class="card-cover-link">
       <img 
         class="card-cover"
         loading="lazy"
-        src="https://picsum.photos/745/419/?rand=2{{ i }}" 
-        alt="Change me"
+        src="{{ post.cover.url }}"
+        alt="Cover do post: {{ post.title }}"
       >
     </a>
   </div>
+  {% endif %}
 
   <div class="card-text-wrapper">
     <div class="card-title-wrapper">
