travei em page_obj, espero entender nos proximos dias sobre isso

--- a/djangoapp/blog/templates/blog/base.html
+++ b/djangoapp/blog/templates/blog/base.html
@@ -2,6 +2,7 @@
 <html lang="pt-br">
 <head>
   {% include 'blog/partials/_head.html' %}
+  {% block additional_head %} {% endblock additional_head %}
 </head>
 <body class="dark-theme">
   <div class="blog-wrapper">
